# yootils

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: on-pull-request.yaml  on-release.yaml  on-tag.yaml
tests/datetime/: test_utcdatetime.py  test_utcnow.py  utcdatetime.py
tests/functools/: test_propagate_error.py
tests/google/auth/: test_get_service_account_oidc_jwt.py
tests/time/: test_time_execution.py
yootils/datetime/: utcdatetime.py  utcnow.py
yootils/functools/: propagate_error.py
yootils/google/auth/: get_service_account_oidc_jwt.py
yootils/time/: time_execution.py
