[tool.poetry]
name = "yootils"
version = "0.1.0"
description = "Stuff I often need."
authors = ["Duy Nguyen <hello.duyknguyen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/duynguyen158/yootils"
repository = "https://github.com/duynguyen158/yootils"
packages = [{ include = "yootils" }, { include = "yootils/py.typed" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
google-auth = "^2.34.0"
aiohttp = "^3.10.5"
urllib3 = "^2.2.2"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
ruff = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = [
    "E501", # line too long
]

[tool.mypy]
strict = true
files = "."
exclude = ['\.venv']

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
